# agent-ironman

./: .env.example  .gitignore  PRODUCTION_ENVIRONMENT.md  PROJECT_SPEC.md  README.md  TEST_ENVIRONMENT.md  main.py  pyproject.toml
agents/: interface.py  observer.py  orchestrator.py  reporter.py
api/: server.py
core/: config.py  llm.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ServiceMap.jsx
infrastructure/: k8s_client.py  prometheus_client.py  redis_client.py
scratch/: dummy_agent.py
